--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable("space-invaders"
 
 target_include_directories("space-invaders" PUBLIC cpu)
 target_compile_options("space-invaders" PRIVATE -Wall -Wextra -Wpedantic -Wno-unused-variable -Wno-unused-function -Wno-unused-result -std=c99)
+target_link_libraries("space-invaders" -lSDL2)
