--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,5 @@ add_executable("space-invaders"
     cpu/cpu.c)
 
 target_include_directories("space-invaders" PUBLIC cpu)
-target_compile_options("space-invaders" PRIVATE -Wall -Wextra -Wpedantic)
+target_compile_options("space-invaders" PRIVATE -Wall -Wextra -Wpedantic -Wno-unused-variable -Wno-unused-function -Wno-unused-result)
 target_link_libraries("space-invaders" -lSDL2)
